# docstor

./: .gitignore  Cargo.toml  README.md
docstor/: Cargo.toml  Makefile.toml
docstor/src/: main.rs
docstoradm/: Cargo.toml
docstord/: Cargo.toml  Makefile.toml
docstord/src/: main.rs  store.rs
libdocapi/: Cargo.toml  Makefile.toml  build.rs
libdocapi/src/: docstor.proto  docstor.rs
samples/: config.toml
