[package]
name = "libdocapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/docstor.rs"

[dependencies]
tonic = "0.7.2"
prost = "0.10.3"

[build-dependencies]
tonic-build = "0.7.2"

[build]
RUSTFLAGS="-Aunused_qualifications"